tests/parser/errors/if.ray
if true 
if true {} else = // '=' to avoid having a \n
if true do print "ok" }

